refactor: Dealer에서 ProfitDto의 존재를 모르도록 수정